--- a/CS/MvcDashboard/Views/Home/Index.cshtml
+++ b/CS/MvcDashboard/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
 </script>
 @Html.DevExpress().Dashboard(settings => {
 	settings.Name = "Dashboard";
+	settings.ControllerName = "DefaultDashboard";
 	settings.Width = Unit.Percentage(100);
 	settings.Height = Unit.Percentage(100);
 	settings.WorkingMode = DevExpress.DashboardWeb.WorkingMode.Designer;
